# templatelr

./: CMakeLists.txt  README.md  classtemplate.cpp  dispatchTable.cpp  functiontemplateamain.cpp  main.cpp  membertemplates.cpp  metamain.cpp  moverefmain.cpp  observermain.cpp  partialtemplate.cpp  queuemain.cpp  rvalue.cpp  templatespecialization.cpp  tpamain.cpp
